objects/Oracle_Product_Group_Code__c.object
<CustomObject>
    <description>Oracle Product Group Code conversion table for Products</description>
    <fields>
        <fullName>Product_Group_Description__c</fullName>
        <label>Product Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Product_Type__c</fullName>
        <label>Salesforce Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Oracle Product Group Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Group_Description__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Salesforce_Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product_Group_Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Product Group Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>